# py-kv-store-adapter

./: pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
key-value/key-value-aio/: README.md  pyproject.toml
key-value/key-value-aio/src/key_value/aio/: __init__.py  errors.py  types.py
key-value/key-value-aio/src/key_value/aio/adapters/: pydantic.py  raise_on_missing.py
key-value/key-value-aio/src/key_value/aio/stores/: base.py
key-value/key-value-aio/src/key_value/aio/stores/disk/: __init__.py  multi_store.py  store.py
key-value/key-value-aio/src/key_value/aio/stores/elasticsearch/: __init__.py  store.py  utils.py
key-value/key-value-aio/src/key_value/aio/stores/memcached/: __init__.py  store.py
key-value/key-value-aio/src/key_value/aio/stores/memory/: store.py
key-value/key-value-aio/src/key_value/aio/stores/mongodb/: __init__.py  store.py
key-value/key-value-aio/src/key_value/aio/stores/null/: __init__.py  store.py
key-value/key-value-aio/src/key_value/aio/stores/redis/: __init__.py  store.py
key-value/key-value-aio/src/key_value/aio/stores/simple/: __init__.py  store.py
key-value/key-value-aio/src/key_value/aio/stores/valkey/: __init__.py  store.py
key-value/key-value-aio/src/key_value/aio/utils/: managed_entry.py  time_to_live.py
key-value/key-value-aio/src/key_value/aio/wrappers/: __init__.py  base.py  passthrough_cache.py  prefix_collections.py  prefix_keys.py  single_collection.py  statistics.py  ttl_clamp.py
key-value/key-value-aio/tests/: cases.py  conftest.py  test_types.py
key-value/key-value-aio/tests/adapters/: test_pydantic.py  test_raise.py
key-value/key-value-aio/tests/stores/: conftest.py
key-value/key-value-aio/tests/stores/disk/: test_disk.py  test_multi_disk.py
key-value/key-value-aio/tests/stores/elasticsearch/: test_elasticsearch.py
key-value/key-value-aio/tests/stores/memcached/: test_memcached.py
key-value/key-value-aio/tests/stores/memory/: test_memory.py
key-value/key-value-aio/tests/stores/mongodb/: test_mongodb.py
key-value/key-value-aio/tests/stores/redis/: test_redis.py
key-value/key-value-aio/tests/stores/simple/: test_store.py
key-value/key-value-aio/tests/stores/valkey/: test_valkey.py
key-value/key-value-aio/tests/stores/wrappers/: test_clamp_ttl.py  test_passthrough_cache.py  test_prefix_collection.py  test_prefix_key.py  test_single_collection.py  test_statistics.py
key-value/key-value-aio/tests/utils/: test_managed_entry.py  test_sanitize.py
