[project]
name = "py-key-value"
version = "0.2.0"
description = "Key-Value Store Project"
readme = "README.md"
requires-python = ">=3.10"


[tool.uv.workspace]
members = [
    "key-value/key-value-aio",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportExplicitAny = false
reportMissingTypeStubs = false
include = ["**/tests/**", "**/src/**"]
exclude = [
    "**/playground/**",
    "**/examples/**",
    "**/references/**",
    "**/docs/**",
    "**/.venv/**",
]

[tool.ruff]
target-version = "py310"
lint.fixable = ["ALL"]
lint.ignore = [
    "COM812",
    "PLR0913", # Too many arguments, MCP Servers have a lot of arguments, OKAY?!
]
lint.extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "F",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]

line-length = 140

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*.py" = [
    "S101", # Ignore asserts
    "DTZ005", # Ignore datetime.UTC
    "PLR2004", # Ignore magic values
    "E501", # Ignore line length
]

[dependency-groups]
dev = [
    "docker>=7.1.0",
]
